fix(attribution): adjust position for better visibility

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -5,6 +5,7 @@ html {
 }
 
 body {
+    position: relative;
     height: 100%;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
